# State_machine_project

./: .gitignore  CMakeLists.txt  README.md  config.cfg
headers/: file_handler.h  info_hub.h  initialize_state.h  resource_manager.h  state_base.h  state_machine.h  type_resource.h
res/: resources.txt
sources/: file_handler.cpp  info_hub.cpp  initialize_state.cpp  main.cpp  resource_manager.cpp  state_base.cpp  state_machine.cpp  type_resource.cpp
tests/: CMakeLists.txt  file_handler_test.cpp  info_hub_test.cpp  resource_manager_test.cpp  test_1.cpp  type_resource_test.cpp
tests/test_res/: coins.txt  resources.txt
